fixes on mobile marketplace filtering

--- a/src/app/marketplace-left-bar/marketplace-left-bar.component.scss
+++ b/src/app/marketplace-left-bar/marketplace-left-bar.component.scss
@@ -189,7 +189,7 @@
       color: #2D2D2D;
     }
 }
-.mobile__nav__inner__marketplace {
+.flyout__nav__inner__marketplace {
     padding: 10px 10px 90px 10px;
     background-color: #F9F9F9;
     border-radius: 15px;
